@@ -1,8 +1,17 @@
+2016-07-18  Karl Berry  <karl@freefriends.org>
+
+	* Makefile (dev_null): new macro for </dev/null.
+	(tex4ht_fonts_cjk_derived, etc.): use it when ht*tex is not
+	invoked directly, so we don't ever sit around waiting for input.
+	
+	* Makefile (diff-all): excise more from the diff results.
+	(diff1): use same $(diff).
+
 2016-07-18  Michal Hoftich  <michal.h21@gmail.com>
 
-	* tex4ht-sty.tex (tex4ht.sty): make macros patched by \pend:def and similar
-	patching commands \long, in order to correctly support macros defined with
-	\newcommand.
+	* tex4ht-sty.tex (tex4ht.sty): make macros patched by \pend:def
+       	and similar patching commands \long, in order to correctly support
+	macros defined with \newcommand.
 	<https://puszcza.gnu.org.ua/bugs/index.php?330>.
 
 2016-07-17  Karl Berry  <karl@freefriends.org>
